@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    id 'scala'
     id 'idea'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '1.2.4'
@@ -33,17 +32,8 @@ dependencies {
     compile 'org.scala-lang:scala-library:2.12.2'
     compile 'net.dv8tion:JDA:3.0.0_189'
     compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.typesafe.play:play-json_2.12:2.6.0-M7'
     compile 'com.sedmelluq:lavaplayer:1.2.36'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-tasks.withType(ScalaCompile) {
-    configure(scalaCompileOptions.forkOptions) {
-        memoryMaximumSize = '1G'
-        jvmArgs = ['-XX:MaxPermSize=512M']
-    }
-}
-
 compileJava.options.encoding = 'UTF-8'
-compileScala.options.encoding = 'UTF-8'
